playing music works